# physrisk

./: .aicoe-ci.yaml  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .pre-commit-config.yaml-backup  .prow.yaml  .readthedocs.yaml  .thoth.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  OWNERS  Pipfile  README.md  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  major-release.md  minor-release.md  patch-release.md
.github/PULL_REQUEST_TEMPLATE/: POLISH_TEMPLATE.md  SIMPLE_TEMPLATE.md
.github/workflows/: bootstrap.yaml  build-test-release.yaml  build-test.yaml  builds.yaml  ci-tox.yaml  ci.yaml  ci.yml  codeql.yaml  codeql.yml  dependencies.yaml  documentation.yaml  openssf-scorecard.yaml  python-package.yml  python-publish.yml  python-test.yml  release-drafter.yaml  release.yaml  release.yml  security-scans.yaml  security.yaml  test-publish.yml  test-release.yaml  test-release.yml  testing.yaml  verify-gha-versions.yaml
datasets/: README.md  portfolio_examples.py
datasets/hazard/: map_builder.py  protocols.py  task_runner.py
datasets/test/: test_heat.py  test_heat_transforms.py
docs/: README.md  SECURITY-SCANNING.md  conf.py  conf.py.backup  getting-started.rst  hazards.rst  index.rst  make.bat  methodology.rst  modules.rst  physrisk.api.rst  physrisk.api.v1.rst  physrisk.api.v2.rst  physrisk.data.rst  physrisk.data.static.example_portfolios.rst  physrisk.data.static.hazard.rst  physrisk.data.static.rst  physrisk.data.static.vulnerability.rst  physrisk.hazard_models.rst  physrisk.kernel.rst  physrisk.risk_models.rst  physrisk.rst  physrisk.utils.rst  physrisk.vulnerability_models.rst  references.bib  requirements-docs.txt  test.ipynb  user-guide.rst
docs/api/: physrisk.kernel.rst  physrisk.risk_models.rst  physrisk.rst  physrisk.utils.rst  physrisk.vulnerability_models.rst
docs/examples/: hazard_indicators.ipynb
docs/getting_started/: cement_plants_example.ipynb  cement_plants_example_config.csv  getting_started.rst  hazard_inventory.ipynb
docs/handbook/: onboarding.rst
docs/hazards/: coastal_floods.rst  landslide.rst  riverine_floods.rst  water_stress.rst  wildfire.rst  windstorm.rst
docs/literature/: Literature_review.xlsx
docs/methodology/: PhysicalRiskMethodology.aux  PhysicalRiskMethodology.tex  PhysicalRiskMethodology.toc  PhysicalRiskMethodologyBibliography.bib
docs/mindmap/: OS-C Physical Risk and Resilience - Overview MindMap.html  OS-C Physical Risk and Resilience - Overview MindMap.mmap
docs/notebooks/: 1_hazard_indicators.ipynb  2_asset_level_impacts.ipynb  3_vulnerability_config.ipynb
docs/toadapt/: README.md
docs/user-guide/: add_new_data.ipynb  calculations_via_requests.ipynb  general_workflow.ipynb  introduction.ipynb  vulnerability_config.ipynb  vulnerability_uncertainty.ipynb
docs/user_guide/: introduction.ipynb  user_guide.rst
literature/: Literature review.xlsx
methodology/: PhysicalRiskMethodology.bbl  PhysicalRiskMethodology.tex  PhysicalRiskMethodology.toc  PhysicalRiskMethodologyBibliography.bib
methodology/literature/: Literature_review.xlsx
methodology/plots/: interp_pixel_is_area.ipynb  top_level_view.pptx
methodology/toadapt/: README.md
notebooks/: mapbox_prepare.ipynb  zarr_from_geotiffs.ipynb
notebooks/examples/: 1_hazard_indicators.ipynb  2_asset_level_impacts.ipynb
notebooks/hazard_onboarding/: Untitled.ipynb  map_utilities.py  mapbox_utilities.py  onboard_all.py  onboard_osc_heat.py  onboard_wri.py  zarr_utilities.py
scripts/: check-security-tools.sh  ci-sbom-scan.sh  dev-versioning.sh  linting.sh  purge-dev-tags.sh  release-versioning.sh  rename-tests.sh  sbom-scan.sh  test-rename.sh  tomllint.sh  version.sh
scripts/generate_config/: generate_vulnerability_config.py
src/: physrisk  physrisk-lib
src/data/: make_dataset.py
src/physrisk/: __init__.py  container.py  requests.py  risk_requests.py
src/physrisk_lib/: requests.py
tests/: base_test.py  conftest.py  test_oed_occupancy_update.py
tests/api/: container.py  container_test.py  data_requests_test.py  housing_kaggle_spain.json.bz2  impact_requests_test.py  test_container.py  test_data_requests.py  test_impact_requests.py  wri_global_power_plant_database.tbz2
tests/data/: data_retrieval_test.py  events_retrieval_test.py  hazard_model_store.py  hazard_model_store_test.py  static_data_test.py  test_data_retrieval.py  test_geocode_google.py  test_hazard_model_store.py  test_static_data.py
tests/hazard_models/: api_hazard_model_test.py  test_api_hazard_model.py  test_core_hazards.py  test_visualisation.py
tests/kernel/: asset_impact_test.py  chronic_asset_impact_test.py  curves_test.py  exposure_test.py  financial_model_test.py  hazard_models_test.py  image_creation_test.py  live_services_test.py  test_asset_impact.py  test_assets.py  test_chronic_asset_impact.py  test_curves.py  test_events.py  test_exposure.py  test_financial_model.py  test_hazard_models.py  test_image_creation.py  test_impact_aggregation.py  test_live_services.py
tests/models/: config_based_vulnerability_test.py  example_models_test.py  hazard_selection_test.py  power_generating_asset_models_test.py  real_estate_models_stress_test_test.py  real_estate_models_test.py  test_WBGT_Model.py  test_config.py  test_example_models.py  test_power_generating_asset_models.py  test_wind_models.py  wbgt_model_test.py  wind_models_test.py  wind_turbine_models_test.py
tests/physrisk/: conftest.py
tests/risk_models/: risk_models_stress_test_test.py  risk_models_test.py  test_portfolio_models.py  test_risk_models.py
tests/vulnerability_models/: config_based_uncertainty_test.py  config_based_vulnerability_test.py  config_generate_test.py  example_models_test.py  hazard_selection_test.py  power_generating_asset_models_test.py  real_estate_models_test.py  test_asset_factory.py  test_config_based_uncertainty.py  (+13 more)
(+218 files in other folders)
