[metadata]
name = physrisk
author = OS-Climate
author_email = joe.moorhouse@gmail.com
description = Physical risk calculation engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/os-climate/physrisk
project_urls =
    Bug Tracker = https://github.com/os-climate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6

[options.packages.find]
where = src
include = physrisk*

