[metadata]
name = physrisk-lib
author = OS-Climate
author_email = joe.moorhouse@gmail.com
description = Physical risk calculation engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/os-climate/physrisk
project_urls =
    Bug Tracker = https://github.com/os-climate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    affine==2.3.0
    numpy==1.22.0
    pydantic==1.9.0
    python-dotenv==0.19.2
    requests==2.27.1
    scipy==1.7.3
    s3fs==2022.1.0
    zarr==2.10.3

[options.packages.find]
where = src
include = physrisk*
