[metadata]
name = physrisk-lib
author = OS-Climate
author_email = joe.moorhouse@gmail.com
description = Physical risk calculation engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/os-climate/physrisk
project_urls =
    Bug Tracker = https://github.com/os-climate
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    affine==2.3.0
    dependency-injector==4.41.0
    numba==0.56.4
    numpy==1.22.0
    pillow==9.4.0
    pydantic==2.4.2
    python-dotenv==0.19.2
    requests==2.27.1
    scipy==1.7.3
    s3fs==2022.1.0
    zarr==2.10.3

[options.packages.find]
where = src
include = physrisk*
